Improve blackjack ui with responsive scaling and cleaner layout